# AoCS-CourseProject

./: CMakeLists.txt  ReadMe.md  benchmark.cpp  benchmark.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  openclinterface.cpp  openclinterface.h
results/: Comparison.xlsx  ReadME.md
results/Intel i5 12500H/: results_i5-12500h_nosmt.csv  results_i5-12500h_smt.csv
results/Ryzen 9 7940HS/: results_r9-7940hs_nosmt.csv  results_r9-7940hs_smt.csv
